--- a/app/components/bootstrap-modal/modal-header.html
+++ b/app/components/bootstrap-modal/modal-header.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	<h4 *ng-if="modalTitle" class="modal-title">{{modalTitle}}</h4>
+	<h4 *ngIf="modalTitle" class="modal-title">{{modalTitle}}</h4>
 	<ng-content></ng-content>
 </div>
